<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="50dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:src="@drawable/dtvkit" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/country_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/strSettingsCountry" />

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </LinearLayout>

		<LinearLayout
		    android:id="@+id/main_audio_container"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp"
		    android:orientation="horizontal"
		    android:gravity="center_vertical" >

		    <TextView
		        android:id="@+id/main_audio_text"
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical"
		        android:text="@string/strSettingsMainAudioLang" />

		    <Spinner
		        android:id="@+id/main_audio_spinner"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical" />
		</LinearLayout>

		<LinearLayout
		    android:id="@+id/assist_audio_container"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_margin="10dp"
		    android:gravity="center_vertical" >

		    <TextView
		        android:id="@+id/assist_audio_text"
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical"
		        android:text="@string/strSettingsAssistAudioLang" />

		    <Spinner
		        android:id="@+id/assist_audio_spinner"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical" />
		</LinearLayout>

		<LinearLayout
            android:id="@+id/main_subtitle_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/main_subtitle_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/strSettingsMainSubtitleLang" />

            <Spinner
                android:id="@+id/main_subtitle_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/assist_subtitle_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/assist_subtitle_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/strSettingsAssistSubtitleLang" />

            <Spinner
                android:id="@+id/assist_subtitle_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
